--- a/demo/package.json
+++ b/demo/package.json
@@ -8,12 +8,18 @@
             "version": "4.2.0"
         }
     },
+    "main": "app.js",
     "description": "NativeScript Application",
     "license": "SEE LICENSE IN <your-license-filename>",
     "repository": "<fill-your-repository-here>",
     "dependencies": {
+        "@drifters/nativescript-notification": "file:../src",
         "nativescript-theme-core": "~1.0.4",
         "tns-core-modules": "~4.2.0"
+    },
+    "devDependencies": {
+        "nativescript-dev-typescript": "~0.7.0",
+        "typescript": "~2.7.2"
     },
     "readme": "NativeScript Application"
 }
