--- a/demoAngular/package.json
+++ b/demoAngular/package.json
@@ -12,6 +12,7 @@
     "license": "SEE LICENSE IN <your-license-filename>",
     "repository": "<fill-your-repository-here>",
     "dependencies": {
+        "@drifters/nativescript-notification": "file:../src",
         "nativescript-theme-core": "~1.0.4",
         "tns-core-modules": "~4.2.0"
     },
