--- a/demo-angular/package.json
+++ b/demo-angular/package.json
@@ -8,6 +8,9 @@
             "version": "4.2.0"
         }
     },
+    "scripts":{
+        "build.plugin": "cd ../src && npm run build"
+    },
     "description": "NativeScript Application",
     "license": "SEE LICENSE IN <your-license-filename>",
     "repository": "<fill-your-repository-here>",
