--- a/src/package.json
+++ b/src/package.json
@@ -7,8 +7,10 @@
   "scripts": {
     "tsc": "tsc",
     "test": "mocha",
-    "prepublish":"cd ../demo && npm unlink @drifters/nativescript-notification && tns plugin remove ../src && cd ../src && cd ../demo-angular && npm unlink @drifters/nativescript-notification && tns plugin remove ../src && cd ../src",
-    "ci.tslint": "npm i && tslint '**/*.ts' --config '../tslint.json' --exclude '**/node_modules/**'",
+    "ngc": "node --max-old-space-size=8192 ./node_modules/.bin/ngc",
+    "build": "npm i && tsc && npm run ngc",
+    "prepublishOnly": "npm run build",
+    "ci.tslint": "npm i && tslint '**/*.ts' --config ../tslint.json --exclude '**/node_modules/**'",
     "plugin.link": "npm link && cd ../demo && npm link @drifters/nativescript-notification && tns plugin add ../src  && cd ../src",
     "plugin.ng.link": "npm link && cd ../demo-angular && npm link @drifters/nativescript-notification && tns plugin add ../src && cd ../src",
     "demo.android": "npm i && npm run tsc && cd ../demo && tns run android --stacktrace --syncAllFiles",
@@ -30,7 +32,11 @@
   },
   "homepage": "https://github.com/suminksudhi/nativescript-notification#readme",
   "devDependencies": {
-    "tns-platform-declarations": "^4.2.0"
+    "@angular/compiler": "^6.1.6",
+    "@angular/compiler-cli": "^6.1.6",
+    "tns-platform-declarations": "^4.2.0",
+    "tslint": "^5.11.0",
+    "typescript": "^3.0.3"
   },
   "dependencies": {
     "tns-core-modules": "4.2.0"
